--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </style>
 </head>
 <body>
-  <h1>PJM Demand (2025-06-04 → 2025-06-11): Top 5 Daily Peaks (ET)</h1>
+  <h1>PJM Demand Top 5 Daily Peaks (ET)</h1>
   <div id="result">
     <div id="loading">Loading data…</div>
     <div id="output" style="display: none;">
@@ -52,7 +52,7 @@
           <tr>
             <th>Date (ET)</th>
             <th>Time (ET)</th>
-            <th>Value (kW)</th>
+            <th>Value (MW)</th>
           </tr>
         </thead>
         <tbody id="rows">
