--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PJM Demand: Top 5 Daily Peaks (ET)</title>
+  <title>Coincident Peak Program Current Peaks</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -47,7 +47,7 @@
   <h1>PJM Demand Top 5 Daily Peaks (ET)</h1>
 
   <div id="result">
-    <div id="loading">Loading PJM data… (check DevTools → Console for raw JSON)</div>
+    <div id="loading">Loading Data...</div>
     <div id="error" class="error" style="display: none;"></div>
     <div id="output" style="display: none;">
       <table>
@@ -65,11 +65,9 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      // ─── 1) Adjust your date‐range here if needed ─────────────────────────
-      // Currently: June 4 04:00 UTC → June 11 04:00 UTC
       const url =
         'https://peaks.api.ndustrial.io/demand'
-        + '?and=(time.gte.2025-06-04T04%3A00%3A00.000Z,time.lte.2025-06-11T04%3A00%3A00.000Z)'
+        + '?and=(time.gte.2025-06-01T00%3A00%3A00.000Z,time.lte.2025-09-11T23%3A59%3A59.000Z)'
         + '&region=eq.PJM'
         + '&order=time';
 
