--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
   </style>
 </head>
 <body>
+    <button
+    id="alerts-button"
+    onclick="window.location.href='https://ndustrialinternal.github.io/amp-cp-alerts/';">
+    Open Amp CP Alerts
+  </button>
   <!-- PJM Section -->
   <section>
     <h1>PJM Demand Top 5 Daily Peaks (ET)</h1>
