--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     h1 {
       margin-bottom: 0.5rem;
     }
+    h2 {
+      margin-bottom: 0.5rem;
+    }
     section {
       margin-top: 2rem;
       padding: 1rem;
@@ -71,6 +74,7 @@
   <!-- ERCOT Section -->
   <section>
     <h1>ERCOT Demand Top 4 Monthly Peaks (ET)</h1>
+    <h2>DOES NOT INCLUDE IMPACT FROM DC TIES AND WSLs</h2>
     <div id="loading-ercot">Loading ERCOT data…</div>
     <div id="error-ercot" class="error" style="display: none;"></div>
     <div id="output-ercot" style="display: none;">
