--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <!-- ERCOT Section -->
   <section>
     <h1>ERCOT Demand Top 5 Intervals per Month (ET)</h1>
-    <h2>Top 5 15-minute intervals each month; first one bolded</h2>
+    <h2>Top 5 15-minute intervals each month</h2>
     <div id="loading-ercot">Loading ERCOT data…</div>
     <div id="error-ercot" class="error" style="display: none;"></div>
     <div id="output-ercot" style="display: none;">
