--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             const table = document.createElement('table');
             const thead = document.createElement('thead');
             const headerRow = document.createElement('tr');
-            ['Start (ET)', 'CP Load', 'Gross MW', 'Gen MW', 'DC In', 'DC Out', 'WSL']
+            ['Start (ET)', 'CP Load (MW)', 'Gen (MW)', 'DC In (MW)', 'DC Out (MW)', 'WSL (MW)']
               .forEach(text => {
                 const th = document.createElement('th'); th.innerText = text; headerRow.appendChild(th);
               });
@@ -212,7 +212,6 @@
               [
                 d.interval_start_local.replace('T',' ').slice(0,19),
                 d.cp,
-                d.operational_load,
                 d.internal_generation,
                 d.dc_tie_imports,
                 d.dc_tie_exports,
