--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- ERCOT Section -->
   <section>
     <h1>ERCOT Demand Top 5 Intervals per Month (ET)</h1>
-    <h2>Top 5 15-minute intervals each month; first one bolded</h2>
+    <h2>Top 5 15-minute intervals each month</h2>
     <div id="loading-ercot">Loading ERCOT data…</div>
     <div id="error-ercot" class="error" style="display:none;"></div>
     <div id="output-ercot" style="display:none;"><div id="tables-ercot"></div></div>
@@ -99,12 +99,12 @@
               if(!slice.length) return;
               const h3=document.createElement('h3'); h3.innerText=m; cont.appendChild(h3);
               const tbl=document.createElement('table'), thd=document.createElement('thead'), hdr=document.createElement('tr');
-              ['Start (ET)','CP Load','Gross MW','Gen MW','DC In','DC Out','WSL'].forEach(t=>{const th=document.createElement('th'); th.innerText=t; hdr.appendChild(th);});
+              ['Start (ET)','CP Load (MW)','Gen (MW)','DC In (MW)','DC Out (MW)','WSL (MW)'].forEach(t=>{const th=document.createElement('th'); th.innerText=t; hdr.appendChild(th);});
               thd.appendChild(hdr); tbl.appendChild(thd);
               const tbd=document.createElement('tbody');
               slice.forEach((d,i)=>{
                 const tr=document.createElement('tr'), bold=i===0;
-                [ d.interval_start_local.replace('T',' ').slice(0,19), d.cp, d.operational_load, d.internal_generation, d.dc_tie_imports, d.dc_tie_exports, d.wholesale_storage_load ]
+                [ d.interval_start_local.replace('T',' ').slice(0,19), d.cp, d.internal_generation, d.dc_tie_imports, d.dc_tie_exports, d.wholesale_storage_load ]
                   .forEach(val=>{ const td=document.createElement('td');
                     td.innerText= typeof val==='number'? val.toLocaleString(undefined,{minimumFractionDigits:3,maximumFractionDigits:3}) : val;
                     if(bold) td.style.fontWeight='bold'; tr.appendChild(td);
