--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <!-- ERCOT Section -->
   <section>
-    <h1>ERCOT Demand Top 5 Intervals per Month (ET)</h1>
+    <h1>ERCOT Demand Top 5 Intervals per Month (CT)</h1>
     <h2>Top 5 15-minute intervals each month</h2>
     <div id="loading-ercot">Loading ERCOT data…</div>
     <div id="error-ercot" class="error" style="display:none;"></div>
