--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="output-pjm" style="display:none;">
       <table>
         <thead>
-          <tr><th>Date (ET)</th><th>Time (ET)</th><th>Value (MW)</th></tr>
+          <tr><th>Date (ET)</th><th>Time (ET)</th><th>Load (MW)</th></tr>
         </thead>
         <tbody id="rows-pjm"></tbody>
       </table>
@@ -52,7 +52,7 @@
     document.addEventListener('DOMContentLoaded', () => {
       const API_KEY = 'bda3a30f30804e22a62e4637700bab54';
 
-      // PJM via GridStatus
+      // PJM via GridStatus: use load.pjm_rto
       (function fetchPJM() {
         const url =
           'https://api.gridstatus.io/v1/datasets/pjm_standardized_5_min/query'
@@ -63,9 +63,17 @@
         fetch(url, { headers: { 'x-api-key': API_KEY } })
           .then(r => { if (!r.ok) throw new Error(r.statusText); return r.json(); })
           .then(resp => {
-            const arr = resp.data;
-            arr.sort((a,b) => b.value - a.value);
+            const arr = resp.data || [];
 
+            // assign the PJM RTO load to .value
+            arr.forEach(e => {
+              e.value = e['load.pjm_rto'];
+            });
+
+            // sort descending on .value
+            arr.sort((a, b) => (b.value || 0) - (a.value || 0));
+
+            // pick top 5 unique dates
             const seen = new Set(), top = [];
             for (const e of arr) {
               if (top.length >= 5) break;
@@ -87,6 +95,7 @@
               }
             }
 
+            // render into table
             const tb = document.getElementById('rows-pjm');
             tb.innerHTML = '';
             top.forEach(r => {
@@ -94,8 +103,7 @@
               [ r.date,
                 r.time,
                 r.value.toLocaleString(undefined, {
-                  minimumFractionDigits: 3,
-                  maximumFractionDigits: 3
+                  minimumFractionDigits: 3, maximumFractionDigits: 3
                 })
               ].forEach(txt => {
                 const td = document.createElement('td');
@@ -116,7 +124,7 @@
           });
       })();
 
-      // Delay the ERCOT fetch by 1.1 seconds to respect the 1req/sec rate limit
+      // ERCOT Fetch (unchanged)
       setTimeout(() => {
         (function fetchERCOT() {
           const url =
@@ -128,7 +136,7 @@
           fetch(url, { headers: { 'x-api-key': API_KEY } })
             .then(r => { if (!r.ok) throw new Error(r.statusText); return r.json(); })
             .then(resp => {
-              const arr = resp.data;
+              const arr = resp.data || [];
               arr.forEach(d => {
                 d.cp = d.internal_generation
                      + d.dc_tie_imports
@@ -196,7 +204,7 @@
                 tbl.appendChild(tbd);
                 cont.appendChild(tbl);
               });
-              
+
               document.getElementById('loading-ercot').style.display = 'none';
               document.getElementById('output-ercot').style.display = 'block';
             })
@@ -208,7 +216,6 @@
             });
         })();
       }, 1100);
-
     });
   </script>
 </body>
